# LP1

./: README.md
Projeto_easy/: CMakeLists.txt  Makefile  main  server.py  t
Projeto_easy/docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _controle_8cpp.html  _controle_8cpp__incl.dot  _controle_8cpp__incl.map  _controle_8cpp__incl.md5  _controle_8cpp_source.html  _controle_8h.html  _controle_8h__dep__incl.dot  _controle_8h__dep__incl.map  _controle_8h__dep__incl.md5  _controle_8h__incl.dot  _controle_8h__incl.map  _controle_8h__incl.md5  _controle_8h_source.html  _detector_8cpp.html  _detector_8cpp.js  _detector_8cpp__incl.dot  _detector_8cpp__incl.map  _detector_8cpp__incl.md5  _detector_8cpp_a119e1fc1f366a4b720cc9729608ed3bc_cgraph.map  _detector_8cpp_a119e1fc1f366a4b720cc9729608ed3bc_cgraph.md5  _detector_8cpp_a119e1fc1f366a4b720cc9729608ed3bc_icgraph.map  _detector_8cpp_a119e1fc1f366a4b720cc9729608ed3bc_icgraph.md5  _detector_8cpp_a79537b048dbd1693d629c13354ce710c_icgraph.map  _detector_8cpp_a79537b048dbd1693d629c13354ce710c_icgraph.md5  _detector_8cpp_a97a7f824536f404caa7ead67a5371305_icgraph.map  _detector_8cpp_a97a7f824536f404caa7ead67a5371305_icgraph.md5  _detector_8cpp_ab6b06a725b25b4c97c2437a330c576ea_icgraph.map  _detector_8cpp_ab6b06a725b25b4c97c2437a330c576ea_icgraph.md5  _detector_8cpp_source.html  _detector_8h.html  (+170 more)
Projeto_easy/include/: Controle.h  Detector.h  Socket.h
Projeto_easy/src/: Controle.cpp  Detector.cpp  Socket.cpp  main.cpp
(+181 files in other folders)
